--- a/404.html
+++ b/404.html
@@ -1,36 +1,56 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="icon" href="https://matrixdev.xyz/favicon.ico" />
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <!-- Primary Meta Tags -->
-    <title>404 - Matrix Development</title>
+    <title>404 - Crown Subdomains</title>
     <meta name="title" content="404 Not Found!">
-    <meta name="description" content="Matrix Development">
-    <!--<meta name="description" content="Powered by fnageer.ml (Paid Version)">-->
-    <meta name="theme-color" content="#1779E6">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#1779E6">
-    <meta name="msapplication-navbutton-color" content="#1779E6">
+    <meta name="description" content="Crown Subdomains">
+    <!--<meta name="description" content="Powered by fnageer.ml (Free Version)">-->
+    <meta name="theme-color" content="#B31523">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#B31523">
+    <meta name="msapplication-navbutton-color" content="#B31523">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://matrixdev.xyz/">
+    <meta property="og:url" content="https://crown-subdomains.cf/legal">
     <meta property="og:title" content="404 Not Found!">
-    <meta property="og:description" content="Matrix Development">
-    <meta property="og:image" content="https://matrixdev.xyz/assets/img/meta.jpg">
+    <meta property="og:description" content="Crown Subdomains">
+    <meta property="og:image" content="https://crown-subdomains.cf/assets/img/meta.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://matrixdev.xyz/">
+    <meta property="twitter:url" content="https://crown-subdomains.cf/legal">
     <meta property="twitter:title" content="404 Not Found!">
-    <meta property="twitter:description" content="Matrix Development">
-    <meta property="twitter:image" content="https://matrixdev.xyz/assets/img/meta.jpg">
+    <meta property="twitter:description" content="Crown Subdomains">
+    <meta property="twitter:image" content="https://crown-subdomains.cf/assets/img/meta.jpg">
 
-    <meta name="description" content="Matrix Development">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+
+    <!-- Fonts and icons -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Solway:wght@300&display=swap" rel="stylesheet">
+    <!-- Nucleo Icons -->
+    <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="assets/css/nucleo-svg.css" rel="stylesheet" />
+    <!-- Font Awesome Icons -->
+    <link href="assets/css/font-awesome.css" rel="stylesheet" />
+    <link href="assets/css/nucleo-svg.css" rel="stylesheet" />
+    <!-- CSS Files -->
+    <link href="assets/css/argon-design-system.css?v=1.2.2" rel="stylesheet" />
+    <!--<link href="pointer.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="assets/css/pointer.css">
+    <link rel="stylesheet" href="assets/css/purecookie.css">
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.dangomc.ga/css/shards.min.css?v=3.0.0">
