--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                     <div class="container shape-container d-flex align-items-center" style=" height: 75vh; ">
                         <div class="col px-0">
                             <div class="row align-items-center justify-content-center">
-                                <div class="col-lg-12 text-center">
-                                    <!--<img src="./assets/img/cryptoware.png" style="width: 200px;" class="img-fluid">-->
+                                <div class="col-lg-6 text-center">
+                                    <img src="favicon.ico" style="width: 200px;" class="img-fluid">
                                     <h1 class="text-white">Welcome to Crown</h1><!--default is p class="lead text-white"-->
                                     <h4 class="text-white">Premium Free Subdomains</h4>
                                     <div class="btn-wrapper mt-5">
@@ -169,6 +169,12 @@
                                             <span class="btn-inner--icon">&nbsp;<i class="ni ni-spaceship"></i></span>
                                             <span class="btn-inner--text">Join Our Discord Server</span>
                                         </a>
+                                    </div>
+                                </div>
+                                <div class="text-center" style="padding-left:100px">
+                                    <div id="IframeWrapper" style="position: relative;">
+                                        <iframe id="threedee.html" width="400" height="400" frameBorder="0" style="z-index:1" runat="server" src="threedee.html"></iframe>
+                                        <div id="iframeBlocker" style="position:absolute; top: 0; left: 0; width:95%; height:95%;background-color:aliceblue;opacity:0.0;"></div>
                                     </div>
                                 </div>
                             </div>
