--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                         <i class="ni ni-badge ni-3x"></i>
                                         <h4 class="heading mt-4">About Faisal</h4>
                                         <p>
-                                            <br /><img height="50px" src="assets/img/faisal-title.png" /><br /><br />
+                                            <br /><img height="50px" src="assets/img/FaisalBig.png" /><br /><br />
                                             👋 Hi, I’m Faisal! I make websites, bots, apps, software, games, and more! I’m currently learning Discord.js, Git, PHP, and more! I excell at developing websites using HTML, CSS, and JS quickly. I created this website, and I'm looking to collaborate on more!
                                         </p>
                                     </div>
