Added subdomains to the list

--- a/index.html
+++ b/index.html
@@ -195,27 +195,23 @@
                         <div class="col-md-4 text-center">
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
-                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">Domain.com <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
+                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">likes-you.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
                             </div><br />
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
-                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">Domain.com <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
+                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">with-you.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
                             </div><br />
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
-                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">Domain.com <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
+                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">is-a-bitch.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
                             </div><br />
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
-                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">Domain.com <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
+                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">a-bitch.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
                             </div><br />
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
-                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">Domain.com <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
-                            </div><br />
-                            <div class="card border-theme text-primary">
-                                <h6 style="padding-top: 10px;"><b></b></h6>
-                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">Domain.com <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
+                                <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">& Lots More</h6>
                             </div><br />
 
                         </div>
