--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <span class="nav-link-inner--text">Home</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a href="legal" class="nav-link" role="button">
                                 <i class="fa fa-gavel"></i>
                                 <span class="nav-link-inner--text">Legal Info</span>
@@ -122,7 +122,7 @@
                                 <i class="fa fa-handshake-o"></i>
                                 <span class="nav-link-inner--text">Partners</span>
                             </a>
-                        </li>
+                        </li>-->
                         <li class="nav-item d-none d-lg-block">
                             <a href="https://discord.gg/ukPSaDJtGD" target="_blank" class="btn btn-primary btn-icon">
                                 <span class="btn-inner--icon">
@@ -197,7 +197,7 @@
                                 <h6 style="padding-top: 10px;"><b></b></h6>
                                 <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">likes-you.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
                             </div><br />
-                            <div class="card border-theme text-primary">
+                            <!--<div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
                                 <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">with-you.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
                             </div><br />
@@ -208,7 +208,7 @@
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
                                 <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">a-bitch.cf <span class="badge badge-pill badge-primary text-uppercase">$0.00</span></h6>
-                            </div><br />
+                            </div><br />-->
                             <div class="card border-theme text-primary">
                                 <h6 style="padding-top: 10px;"><b></b></h6>
                                 <h6 style="padding-left: 10px;padding-right: 10px;padding-bottom: 10px;">& Lots More</h6>
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-9 col-md-6 mb-4">
+                    <!--<div class="col-xl-9 col-md-6 mb-4">
                         <div class="card border-theme text-primary">
                             <br /><div class="card-body text-center">
                                 <img src="favicon.ico" draggable="false" ondragstart="return false;" style="-moz-user-select: none;padding-top:10px;padding-bottom:10px" alt="..." width="80px" height="100px">
@@ -306,7 +306,7 @@
                                 </div><br />
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <!-- /.row -->
 
@@ -317,7 +317,7 @@
                                   <div class="text-center color">
                                       <br /><br /><br /><br /><h1 class="title" style="margin-bottom:-30px"><img src="favicon.ico" draggable="false" ondragstart="return false;" style="-moz-user-select: none; width:50px;height:50px;margin-bottom:30px" title="Made by fnageer.ml" alt="CROWN" /><txt style="padding-left:10px">CROWN SUBDOMAINS</txt></h1>
                                       <!--<br></br>-->Copyright &copy; Crown Subdomains. Some Rights Reserved.<br /><br />
-                                      <a href="/">Home</a> ▢ <a href="partners">Partners</a> ▢ <a href="legal">Legal Info</a>
+                                      <!--<a href="/">Home</a> ▢ <a href="partners">Partners</a> ▢ <a href="legal">Legal Info</a>-->
                                       <br /><br /><br />
                                       <!--<marquee style="width:66%">Crown Devlopment Website Created & Powered by <a href="https://fnageer.ml/?from=matrixdev-xyz" class="link link--iocaste">fnageer.ml</a>. Hire a web developer for as little as $0.45/month.</marquee>-->
                                   </div>
